toggle visibility and functionality using javascript

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
     <!-- Header Section -->
@@ -32,7 +33,37 @@
     <!-- Projects Section -->
     <section id="projects">
         <h2>My Projects</h2>
-        <p>This is a placeholder for your projects. In future chapters, you’ll add real projects here.</p>
+        <div class="projects">
+            <div class="project">
+                <h3>Project 1: Client Registration Form</h3>
+                <img src="https://i.pinimg.com/736x/7b/06/f4/7b06f4bb3cda45e2273a06004b809968.jpg" alt="Project 1: Client Registration Form">
+                <p>I created a user registration form which allows the computer to suggest text answers, if the user information - such as contact information & address -  is saved on the computer.</p>
+                <button class="show-details" data-project="1">Show Details</button>
+                <div class="details" id="details-1">
+                    <p><strong>Technologies Used:</strong> HTML, CSS</p>
+                    <p><strong>Application Used:</strong> Visual Studio Code</p>
+                </div>
+            </div>
+
+        </div>
+            <div class="project">
+                <h3>Project 2: My Bakery Website</h3>
+                <img src="https://i.pinimg.com/736x/b4/95/5e/b4955eda031886ed0de166554108feba.jpg" alt="Project 2: Bakery Website">
+                <p>Built a basic website for my at-home bakery business. The website included a small introduction, sample menu gallery, and the business contact information.</p>
+                <button class="show-details" data-project="2">Show Details</button>
+                <div class="details" id="details-2">
+                    <p><strong>Technologies Used:</strong> HTML, CSS</p>
+                    <p><strong>Application Used:</strong> Visual Studio Code</p>
+        </div>
+
+        <div class="project">
+            <h3>Project 3: Interactive Quiz - Baking</h3>
+            <img src="https://i.pinimg.com/736x/1a/25/10/1a251079859fe435e820fb1f355ad6e4.jpg" alt="Project 3: Interactive quiz - baking">
+            <p>Created an interactive quiz which quizzes the user on baking related topics, such as dough lamination, flour types, and geographical facts regarding pastries.</p>
+            <button class="show-details" data-project="3">Show Details</button>
+            <div class="details" id="details-3">
+                <p><strong>Technologies Used:</strong> HTML</p>
+                <p><strong>Application Used:</strong> Visual Studio Code</p>
     </section>
 
     <!-- Contact Section -->
