fixed projects container, typos, and generally re-styled the page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Nahla || Portfolio</title>
     <link rel="stylesheet" href="css/styles.css">
     <script defer src="script.js"></script>
 </head>
@@ -33,7 +33,7 @@
     <!-- Projects Section -->
     <section id="projects">
         <h2>My Projects</h2>
-        <div class="projects">
+        <div class="projects-container">
             <div class="project">
                 <h3>Client Registration Form</h3>
                 <img src="https://i.pinimg.com/736x/7b/06/f4/7b06f4bb3cda45e2273a06004b809968.jpg" alt="Project 1: Client Registration Form">
@@ -45,7 +45,6 @@
                 </div>
             </div>
 
-        </div>
             <div class="project">
                 <h3>My Bakery Website</h3>
                 <img src="https://i.pinimg.com/736x/b4/95/5e/b4955eda031886ed0de166554108feba.jpg" alt="Project 2: Bakery Website">
@@ -54,7 +53,8 @@
                 <div class="details" id="details-2">
                     <p><strong>Technologies Used:</strong> HTML, CSS</p>
                     <p><strong>Application Used:</strong> Visual Studio Code</p>
-        </div>
+                </div>
+            </div>
 
         <div class="project">
             <h3>Interactive Quiz - Baking</h3>
@@ -64,7 +64,10 @@
             <div class="details" id="details-3">
                 <p><strong>Technologies Used:</strong> HTML</p>
                 <p><strong>Application Used:</strong> Visual Studio Code</p>
-    </section>
+            </div>
+        </div>
+    </div>
+</section>
 
     <!-- Contact Section -->
     <section id="contact">
