--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Nahla || Portfolio</title>
     <link rel="stylesheet" href="css/styles.css">
     <script defer src="script.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Header Section -->
