edited index.html - added toggle, preloads, skill section, class

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <div class=""theme-toggle-container">
-        <button id="theme-toggle" aria-label=""Toggle dark mode">
+    <div class="theme-toggle-container">
+        <button id="theme-toggle" aria-label="Toggle dark mode">
             <i class="fas fa-moon"></i>
         </button>
     </div>
